--- a/src/configs/base_model.yaml
+++ b/src/configs/base_model.yaml
@@ -1,10 +1,10 @@
 dataset:
-  source: ./../../data/processed/
+  name: name
 model:
   name: base_model
-  epochs: 20
-  batch_size: 32
-  learning_rate: 1e-3
+  epochs: 30
+  batch_size: 8
+  learning_rate: 1e-5
   optimizer: adam
   scheduler: plateau
   only_test: False
