--- a/src/configs/conv_rnn.yaml
+++ b/src/configs/conv_rnn.yaml
@@ -1,26 +1,26 @@
 dataset:
   name: name
 model:
-  name: base_model
+  name: conv_rnn
   epochs: 30
   batch_size: 32
   optimizer: adam
   scheduler: plateau
-  rnn_type: None
   #patience: 1
-  learning_rate: 5e-5
+  learning_rate: 1e-4
   weight_decay: 1e-6
+  rnn_type: rnn  #rnn, lstm, gru, gru2, transformer
   dropout: .3
   only_test: False
 
   lf: wbce          #wbce, bce, fl
   alpha_fl: .915
   gamma_fl: 2
-  pos_weight: 3
+  pos_weight: 6
   dropout: .3
 logger:
   log_dir: ./log
-  experiment_name: train_base_model
+  experiment_name: train_conv_rnn
   version: 1
 checkpoint:
   monitor: val_loss
