--- a/src/configs/conv_long_rnn.yaml
+++ b/src/configs/conv_long_rnn.yaml
@@ -1,15 +1,16 @@
 dataset:
   name: name
 model:
-  name: base_model
-  epochs: 30
-  batch_size: 32
+  name: conv_long_rnn
+  epochs: 25
+  batch_size: 4
   optimizer: adam
   scheduler: plateau
   rnn_type: None
+  #patience: 1
   learning_rate: 1e-5
-  weight_decay: 1e-5
-  dropout: .5
+  weight_decay: 1e-3
+  dropout: .3
   only_test: False
 
   lf: bce          #wbce, bce, fl
@@ -19,7 +20,6 @@ model:
   augmentation_techniques: ['shear', 'flip', 'gaussian_noise', 'brightness']
   p_augmentation: .8
   p_augmentation_per_technique: .3
-
 logger:
   log_dir: ./log
   experiment_name: train_base_model
