--- a/src/configs/base_model.yaml
+++ b/src/configs/base_model.yaml
@@ -2,13 +2,14 @@ dataset:
   name: name
 model:
   name: base_model
-  epochs: 30
+  epochs: 50
   batch_size: 32
   optimizer: adam
   scheduler: plateau
   rnn_type: None
+  hidden_size: 0
   learning_rate: 1e-5
-  weight_decay: 1e-5
+  weight_decay: 1e-4
   dropout: .5
   only_test: False
 
