--- a/src/configs/conv_rnn.yaml
+++ b/src/configs/conv_rnn.yaml
@@ -2,15 +2,16 @@ dataset:
   name: name
 model:
   name: conv_rnn
-  epochs: 30
+  epochs: 50
   batch_size: 32
   optimizer: adam
   scheduler: plateau
   #patience: 1
-  learning_rate: 5e-5
-  weight_decay: 1e-2
+  learning_rate: 1e-4
+  weight_decay: 1e-4
   rnn_type: gru  #rnn, lstm, gru, gru2
-  dropout: .5
+  hidden_size: 128
+  dropout: .3
   only_test: False
 
   lf: bce          #wbce, bce, fl
