--- a/src/configs/base_model.yaml
+++ b/src/configs/base_model.yaml
@@ -8,6 +8,7 @@ model:
   scheduler: plateau
   rnn_type: None
   hidden_size: 0
+  num_layers: 0
   learning_rate: 1e-5
   weight_decay: 1e-4
   dropout: .5
