--- a/src/configs/conv_long_lstm.yaml
+++ b/src/configs/conv_long_lstm.yaml
@@ -1,29 +1,33 @@
 dataset:
   name: name
 model:
-  name: conv_long_rnn_cd
+  name: conv_long_lstm_cd
   epochs: 100
-  batch_size: 8
+  batch_size: 4
   optimizer: adam
-  scheduler: constant
+  scheduler: cosine
   rnn_type: none
-  hidden_size: 45
+  hidden_size: 64
+  num_layers: 1
   learning_rate: 1e-4
-  weight_decay: 1e-5
+  weight_decay: 1e-4
   dropout: .3
   only_test: False
-
+  
   lf: bce          #wbce, bce, fl
+  #focal loss hyperparameters
   alpha_fl: .7
   gamma_fl: 2
+  #wbce hyperparameters
   pos_weight: .8
+  #augmentation hyperparameters
   augmentation_techniques: ['shear', 'flip', 'gaussian_noise', 'brightness']
   p_augmentation: .8
-  p_augmentation_per_technique: .3
+  p_augmentation_per_technique: .4
 logger:
   log_dir: ./log
-  experiment_name: conv_long_lstm_1_cd
-  version: 1
+  experiment_name: conv_long_lstm_1_cd_gridsearch
+  version: 0
 checkpoint:
   monitor: val_loss
   save_top_k: 3
