--- a/src/configs/mlp_cd.yaml
+++ b/src/configs/mlp_cd.yaml
@@ -8,6 +8,7 @@ model:
   scheduler: plateau
   rnn_type: None
   hidden_size: 0
+  num_layers: 1
   learning_rate: 1e-7
   weight_decay: 1e-3
   dropout: .2
