--- a/src/configs/base_model.yaml
+++ b/src/configs/base_model.yaml
@@ -2,7 +2,7 @@ dataset:
   name: name
 model:
   name: base_model
-  epochs: 50
+  epochs: 2
   batch_size: 32
   optimizer: adam
   scheduler: plateau
@@ -13,15 +13,14 @@ model:
   weight_decay: 1e-4
   dropout: .5
   only_test: False
-
-  lf: bce          #wbce, bce, fl
-  alpha_fl: .7
-  gamma_fl: 2
+  lf: fl          #wbce, bce, fl
+  use_clinical_data: True
+  alpha_fl: .6
+  gamma_fl: 3
   pos_weight: .8
-  augmentation_techniques: ['shear', 'flip', 'gaussian_noise', 'brightness']
+  augmentation_techniques: ['shear',  'gaussian_noise', 'brightness']
   p_augmentation: .8
   p_augmentation_per_technique: .3
-
 logger:
   log_dir: ./log
   experiment_name: train_base_model
