--- a/src/configs/conv_long_lstm.yaml
+++ b/src/configs/conv_long_lstm.yaml
@@ -5,12 +5,12 @@ model:
   epochs: 150
   batch_size: 2
   optimizer: adam
-  scheduler: cosine
+  scheduler: plateau
   rnn_type: none
-  hidden_size: 32
+  hidden_size: 256
   num_layers: 1
-  learning_rate: 5e-5
-  weight_decay: 1e-4
+  learning_rate: 1e-4
+  weight_decay: 1e-3
   dropout: .3
   only_test: False
   use_clinical_data: True
@@ -19,7 +19,7 @@ model:
   gamma_fl: 2
   pos_weight: .8
   augmentation_techniques: ['shear', 'flip', 'rotate']
-  p_augmentation: .3
+  p_augmentation: .7
   p_augmentation_per_technique: .4
 logger:
   log_dir: ./log
