--- a/src/configs/conv_rnn.yaml
+++ b/src/configs/conv_rnn.yaml
@@ -18,8 +18,8 @@ model:
   alpha_fl: .92
   gamma_fl: 2
   pos_weight: 6
-  augmentation_techniques: ['shear',  'gaussian_noise', 'brightness']
-  p_augmentation: .3
+  augmentation_techniques: ['shear',  'flip', 'rotation']
+  p_augmentation: .7
   p_augmentation_per_technique: .5
 logger:
   log_dir: ./log
