--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ img_whole_union/
 img_lesions_statistics/
 lesions_cropped/
 plots/
-
+results_csv/
+display/augmentation
+models/saved_models
 
 *debug.yaml
