--- a/src/configs/base_model.yaml
+++ b/src/configs/base_model.yaml
@@ -15,10 +15,10 @@ model:
   only_test: False
   lf: fl          #wbce, bce, fl
   use_clinical_data: True
-  alpha_fl: .75
+  alpha_fl: .923
   gamma_fl: 3
   pos_weight: .8
-  augmentation_techniques: ['random_affine']
+  augmentation_techniques: ['random_affine', 'shear', 'random_rotate', 'random_flip']
   p_augmentation: .3
   p_augmentation_per_technique: .3
 logger:
