--- a/src/configs/base_model_enhancedV2.yaml
+++ b/src/configs/base_model_enhancedV2.yaml
@@ -1,7 +1,7 @@
 dataset:
   name: name
 model:
-  name: base_model
+  name: base_model_enhancedV2
   epochs: 100
   batch_size: 32
   optimizer: adam
