--- a/src/configs/base_model.yaml
+++ b/src/configs/base_model.yaml
@@ -2,25 +2,25 @@ dataset:
   name: name
 model:
   name: base_model
-  epochs: 100
+  epochs: 150
   batch_size: 32
   optimizer: adam
   scheduler: plateau
   rnn_type: None
   hidden_size: 0
   num_layers: 0
-  lr: 5e-5
+  lr: 1e-4
   weight_decay: 1e-3
-  dropout: .5
+  dropout: .3
   only_test: False
   lf: fl          #wbce, bce, fl
-  use_clinical_data: True
-  alpha_fl: .75
+  use_clinical_data: False
+  alpha_fl: .25
   gamma_fl: 3
-  pos_weight: .8
+  pos_weight: .3
   augmentation_techniques: ['random_affine', 'shear', 'random_rotate', 'random_flip']
-  p_augmentation: .3
-  p_augmentation_per_technique: .3
+  p_augmentation: .9
+  p_augmentation_per_technique: 1.
 logger:
   log_dir: ./log
   experiment_name: train_base_model
