--- a/src/configs/base_model.yaml
+++ b/src/configs/base_model.yaml
@@ -14,13 +14,13 @@ model:
   dropout: .3
   only_test: False
   lf: fl          #wbce, bce, fl
-  use_clinical_data: False
-  alpha_fl: .25
-  gamma_fl: 3
+  use_clinical_data: True
+  alpha_fl: .1
+  gamma_fl: 2
   pos_weight: .3
   augmentation_techniques: ['random_affine', 'shear', 'random_rotate', 'random_flip']
-  p_augmentation: .9
-  p_augmentation_per_technique: 1.
+  p_augmentation: 1.
+  depth_attention: 1.
 logger:
   log_dir: ./log
   experiment_name: train_base_model
