--- a/src/configs/wdt_conv.yaml
+++ b/src/configs/wdt_conv.yaml
@@ -15,12 +15,12 @@ model:
   only_test: False
   lf: fl          #wbce, bce, fl
   use_clinical_data: True
-  alpha_fl: .75
+  alpha_fl: .2
   gamma_fl: 3
   pos_weight: .8
   augmentation_techniques: ['random_affine', 'shear', 'random_rotate', 'random_flip']
   p_augmentation: .3
-  p_augmentation_per_technique: .3
+  depth_attention: .3
 logger:
   log_dir: ./log
   experiment_name: train_base_model
