--- a/src/configs/wdt_conv.yaml
+++ b/src/configs/wdt_conv.yaml
@@ -11,16 +11,16 @@ model:
   num_layers: 0
   lr: 1e-4
   weight_decay: 1e-3
-  dropout: .5
+  dropout: .3
   only_test: False
   lf: fl          #wbce, bce, fl
   use_clinical_data: True
-  alpha_fl: .1
+  alpha_fl: .2
   gamma_fl: 3
   pos_weight: .8
   augmentation_techniques: ['random_affine', 'shear', 'random_rotate', 'random_flip']
   p_augmentation: .9
-  depth_attention: .3
+  depth_attention: 3
 logger:
   log_dir: ./log
   experiment_name: train_base_model
