--- a/src/configs/base_model.yaml
+++ b/src/configs/base_model.yaml
@@ -11,16 +11,16 @@ model:
   num_layers: 0
   lr: 1e-4
   weight_decay: 1e-3
-  dropout: .3
+  dropout: .1
   only_test: False
   lf: fl          #wbce, bce, fl
   use_clinical_data: True
-  alpha_fl: .2
+  alpha_fl: .9
   gamma_fl: 2
   pos_weight: .3
   augmentation_techniques: ['random_affine', 'shear', 'random_rotate', 'random_flip']
   p_augmentation: .9
-  depth_attention: 1.
+  depth_attention: 1
 logger:
   log_dir: ./log
   experiment_name: train_base_model
