--- a/src/configs/trans_med.yaml
+++ b/src/configs/trans_med.yaml
@@ -4,7 +4,7 @@ model:
   name: trans_med
   epochs: 100
   batch_size: 32
-  optimizer: adam
+  optimizer: sgd
   scheduler: plateau
   rnn_type: None
   hidden_size: 0
@@ -13,9 +13,9 @@ model:
   weight_decay: 1e-4
   dropout: .1
   only_test: False
-  lf: fl          #wbce, bce, fl
+  lf: fl       #wbce, bce, fl
   use_clinical_data: True
-  alpha_fl: .2
+  alpha_fl: .3
   gamma_fl: 2
   pos_weight: .8
   augmentation_techniques: ['random_affine', 'shear', 'random_rotate', 'random_flip']
